--- a/index.html
+++ b/index.html
@@ -3,18 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/fav.webp" />
-    <meta property="og:title" content="Mithesh's Portfolio" />
-    <meta property="og:description" content="Explore my dynamic portfolio, showcasing my expertise as a full-stack developer and a collection of projects. Discover cutting-edge web development, design, and technology skills that bring creativity to life." />
-    <meta name="description" content="Explore my dynamic portfolio, showcasing my expertise as a full-stack developer and a collection of projects. Discover cutting-edge web development, design, and technology skills that bring creativity to life." />
-    <meta name="keywords" content="portfolio, Mithesh, web development, design, front end, full stack" />
-    <meta name="author" content="Mithesh" />
-    <meta name="robots" content="index, follow" />
+    <link rel="icon" type="image/png" href="/flash.png" />
     
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@700&display=swap" rel="stylesheet" />
-    <link href="https://api.fontshare.com/v2/css?f[]=satoshi@1,300,500&display=swap" rel="stylesheet" />
+    <link href="https://api.fontshare.com/v2/css?f[]=satoshi@1,300,500&display=swap" rel="stylesheet"/>
     
-    <title>Mithesh's Portfolio</title>
+    <title>Archit Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
